# validatable

./: .flake8  .pre-commit-config.yaml  .pre-commit-config.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  commit.sh  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  lint.yml  pre-commit.yml  release.yml  test_linux.yml  test_mac.yml  tests.yml
cov/: cov-macos.json  cov-ubuntu.json  coverage.json  d_52da48265962deae___init___py.html  d_52da48265962deae_engine_py.html  d_52da48265962deae_fields_py.html  d_52da48265962deae_generic_types_py.html  d_52da48265962deae_inference_py.html  d_52da48265962deae_main_py.html  d_52da48265962deae_type_dispatch_py.html  d_52da48265962deae_typing_py.html  d_52da48265962deae_version_py.html  index.html  status.json
other/: example.py  sql_types.py
other1/: commit.sh  example2.py
scripts/: commit.sh
tests/: conftest.py  factories.py  prepare_column_name.py  requirements-linting.txt  requirements-testing.txt  test_basetable.py  test_dispatch.py  test_fields.py  test_generic_types.py  test_get_column.py  test_inference.py  test_json_type.py  test_nullable.py  test_prepare_column_name.py  test_sequential_type.py  test_types.py
validatable/: __init__.py  engine.py  fields.py  generic_types.py  inference.py  main.py  type_dispatch.py  types_.py  typing.py  util.py  version.py
