[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v -ra"
testpaths = ["tests"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.black]
line-length = 79
include = '\.pyi?$'

[tool.coverage.run]
branch = true
source = ["validatable"]
omit = []

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79

[build-system]
requires = ["setuptools >= 40.9.0", "wheel", "toml"]
build-backend = "setuptools.build_meta"
