[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = ["tests"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.black]
line-length = 79
include = '\.pyi?$'

[tool.coverage.run]
branch = true
source = ["validatable"]
omit = []
dynamic_context = "test_function"

[tool.coverage.paths]
source = ["validatable/", "/Users/runner/work/*"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79

[build-system]
requires = ["setuptools >= 40.9.0", "wheel", "toml"]
build-backend = "setuptools.build_meta"

[tool.mypy]

plugins = "pydantic.mypy"
follow_imports = "silent"
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
